--- a/src/Common/Common.fsproj
+++ b/src/Common/Common.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="paket.references" />
     <Compile Include="Types.fs" />
     <Compile Include="Helpers.fs" />
   </ItemGroup>
