--- a/src/Renderer/Renderer.fsproj
+++ b/src/Renderer/Renderer.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Helpers.fs" />
     <Compile Include="JSTypes.fs" />
     <Compile Include="JSHelpers.fs" />
     <Compile Include="Extractor.fs" />
@@ -23,7 +24,19 @@
     <Compile Include="UI/SelectedComponentView.fs" />
     <Compile Include="UI/MainView.fs" />
 
-    <Compile Include="Renderer.fs" />
+    <Compile Include="RendererTop.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Fable.Core" Version="3.1.5" />
+    <PackageReference Include="Fable.Electron" Version="6.0.0" />
+    <PackageReference Include="Fable.Elmish" Version="3.0.6" />
+    <PackageReference Include="Fable.Elmish.Debugger" Version="3.2.0" />
+    <PackageReference Include="Fable.Elmish.HMR" Version="4.0.1" />
+    <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
+    <PackageReference Include="Fable.React" Version="6.2.0" />
+    <PackageReference Include="Fable.SimpleJson" Version="3.9.0" />
+    <PackageReference Include="FSharp.Core" Version="4.7.2" />
+    <PackageReference Include="Fulma" Version="2.9.0" />
   </ItemGroup>
   <!-- Dependencies -->
   <ItemGroup>
