--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "electronWebpack": {
     "title": true,
-    "staticSourceDirectory": "website",
+    "staticSourceDirectory":  "static",
     "main": {
       "sourceDirectory": "src/Main",
       "webpackConfig": "webpack.additions.main.js"
     },
     "renderer": {
       "sourceDirectory": "src/Renderer",
-      "template": "website/index.html",
+      "template": "src/renderer/template.html",
       "webpackConfig": "webpack.additions.renderer.js"
     }
   },
@@ -37,12 +37,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "bufferutil": "^4.0",
+    "bufferutil": ">=4.0",
+    "copy-webpack-plugin": "^6.0.3",
     "devtron": "^1.4",
-    "electron": "^8.0.0",
+    "electron": "~8.0.0",
     "electron-builder": "^22.3.2",
     "electron-devtools-installer": "^3.1.0",
-    "electron-webpack": "^2.6",
+    "electron-webpack": "^2.8.2",
     "electron-window-state": "^5.0",
     "fable-compiler": "^2.4.13",
     "fable-loader": "^2.1",
