--- a/src/Main/Main.fsproj
+++ b/src/Main/Main.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="preload.js" />
     <None Include="paket.references" />
     <Compile Include="Bindings.fs" />
     <Compile Include="DarkModeWorkaround.fs" />
